--- a/resources/scss/index.scss
+++ b/resources/scss/index.scss
@@ -141,6 +141,13 @@ html,body{
     flex-grow: 1;
     padding: 30px;
 
+    .device-header{
+        margin-left: -30px;
+        padding: 10px;
+        color: white;
+        background: #171c1c;
+    }
+
     .entry{
         display: flex;
         flex-direction: row;
