--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -69,7 +69,9 @@ html, body {
     position: fixed;
     width: 15%;
     top: 0;
-    left: 0; }
+    left: 0;
+    max-height: 100%;
+    overflow-y: auto; }
     .sidebar .inner .group > h3 {
       padding: 0 15px;
       margin: 5px 0; }
@@ -79,6 +81,9 @@ html, body {
       padding: 20px; }
       .sidebar .inner .entry.active {
         background: #eaeaea; }
+      .sidebar .inner .entry:hover {
+        background: #eaeaea;
+        cursor: pointer; }
   .sidebar .tag {
     font-family: 'JetBrains Mono', monospace;
     font-size: 0.45em;
@@ -141,5 +146,17 @@ html, body {
   height: 100%;
   padding: 30px;
   z-index: -1; }
+
+@media (max-width: 780px) {
+  .content .alternate {
+    display: none; }
+  .content .entry {
+    flex-direction: column; }
+    .content .entry .left, .content .entry .right {
+      flex-basis: 100%;
+      max-width: initial;
+      margin: 0; }
+    .content .entry .right {
+      border-bottom: 1px solid gainsboro; } }
 
 /*# sourceMappingURL=index.css.map */
