--- a/resources/scss/index.scss
+++ b/resources/scss/index.scss
@@ -104,6 +104,8 @@ html,body{
         width: 15%;
         top: 0;
         left: 0;
+        max-height: 100%;
+        overflow-y: auto;
         // padding: 30px;
 
         .group>h3{
@@ -118,6 +120,11 @@ html,body{
 
             &.active{
                 background: #eaeaea;
+            }
+
+            &:hover{
+                background: #eaeaea;
+                cursor: pointer;
             }
         }
     }
@@ -193,4 +200,25 @@ html,body{
     height: 100%;
     padding: 30px;
     z-index: -1;
+}
+
+@media (max-width:780px)  {
+    .content{
+        .alternate{
+            display: none;
+        }
+        .entry{
+            flex-direction: column;
+
+            .left,.right{
+                flex-basis: 100%;
+                max-width: initial;
+                margin: 0;
+            }
+
+            .right{
+                border-bottom: 1px solid gainsboro;
+            }
+        }
+    }
 }
