--- a/resources/scss/index.scss
+++ b/resources/scss/index.scss
@@ -55,8 +55,8 @@ html,body{
     margin: 0;
     padding: 0;
 
-    display: flex;
-    flex-direction: row;
+    // display: flex;
+    // flex-direction: row;
 
     width: 100%;
     min-height: 100%;
@@ -84,6 +84,11 @@ html,body{
         background: #eaeaea;
         font-size: 0.90em;
         padding: 4px 6px;
+    }
+
+    .body{
+        display: flex;
+        flex-direction: row;
     }
 }
 
